--- a/starship/Makefile
+++ b/starship/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1 2021/07/09 18:51:23 pin Exp $
 
-DISTNAME=	starship-0.55.0
+DISTNAME=	starship-0.56.0
 CATEGORIES=	shells
-GITHUB_TAG=	v${PKGVERSION_NOREV}
 MASTER_SITES=	${MASTER_SITE_GITHUB:=starship/}
+GITHUB_TAG=	v${PKGVERSION_NOREV}
 
 MAINTAINER=	mj@mjturner.net
 HOMEPAGE=	https://github.com/starship/starship/
@@ -13,8 +13,10 @@ LICENSE=	isc
 # The libc and rust-battery crates currently have limited platform support
 ONLY_FOR_PLATFORM=	Darwin-*-* DragonFly-*-* FreeBSD-*-* Linux-*-* NetBSD-*-*
 
-USE_LANGUAGES=			c
-USE_TOOLS+=			pkg-config
+.include "cargo-depends.mk"
+
+USE_LANGUAGES=	c
+USE_TOOLS+=	pkg-config
 
 MAKE_ENV+=	OPENSSL_DIR=${BUILDLINK_PREFIX.openssl:Q}
 RUSTFLAGS+=	-C link-arg=${COMPILER_RPATH_FLAG}${BUILDLINK_PREFIX.openssl}/lib
@@ -29,12 +31,15 @@ CARGO_FEATURES+=		http
 CARGO_FEATURES+=	battery
 .endif
 
-.include "cargo-depends.mk"
-
 INSTALLATION_DIRS=	bin
+EGDIR=			${PREFIX}/share/examples/starship/auto-completion
 
 do-install:
+	${INSTALL_DATA_DIR} ${DESTDIR}${EGDIR}
 	${INSTALL_PROGRAM} ${WRKSRC}/target/release/starship ${DESTDIR}${PREFIX}/bin
+	${WRKSRC}/target/release/starship completions bash > ${DESTDIR}${EGDIR}/starship.bash
+	${WRKSRC}/target/release/starship completions fish > ${DESTDIR}${EGDIR}/starship.fish
+	${WRKSRC}/target/release/starship completions zsh > ${DESTDIR}${EGDIR}/_starship
 
 DEPENDS+=		git-base-[0-9]*:../../devel/git-base
 
